--- a/react-xs-and-os/src/components/Game.css
+++ b/react-xs-and-os/src/components/Game.css
@@ -1,15 +1,17 @@
+* {
+  box-sizing: border-box;
+}
 .game {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: black; /* Set the background color to black */
+  
   color: black; /* Set the text color to white for better contrast */
 }
 
 .board {
   display: grid;
   grid-template-columns: repeat(3, 100px);
-  gap: 5px;
 }
 
 .square {
@@ -17,8 +19,9 @@
   height: 100px;
   font-size: 24px;
   text-align: center;
-  border: 1px solid #ddd;
+  border: 2px solid black;
   cursor: pointer;
+  vertical-align: top;
 }
 
 .square:hover:not(.clicked) {
