--- a/react-xs-and-os/src/index.css
+++ b/react-xs-and-os/src/index.css
@@ -5,12 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black; /* Set the background color to black */
+  color: white;
+  text-align: center;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-App{
-  background-color: black;
 }
