--- a/react-xs-and-os/src/index.css
+++ b/react-xs-and-os/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: black; /* Set the background color to black */
-  color: white;
+  color: #228B22;
   text-align: center;
 }
 
